--- a/build.xml
+++ b/build.xml
@@ -74,6 +74,7 @@
 		<mkdir dir="${dist}" />
 		<war destfile="${dist}/${name-release}.war" basedir="${web}" keepcompression="true" webxml="${web}/WEB-INF/web.xml">
 			<lib file="${lib}/pojodbc.jar" />
+			<lib file="${lib}/je-3.3.62.jar" />
 			<lib file="${dist}/${name-release}.jar" />
 		</war>
 	</target>
@@ -87,6 +88,7 @@
 		<mkdir dir="${dist}" />
 		<war destfile="${dist}/${name-debug}.war" basedir="${web}" keepcompression="true" webxml="${web}/WEB-INF/web.xml">
 			<lib file="${lib}/pojodbc.jar" />
+			<lib file="${lib}/je-3.3.62.jar" />
 			<lib file="${dist}/${name-debug}.jar" />
 		</war>
 	</target>
