--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -13,30 +13,33 @@
 		<welcome-file>default.jsp</welcome-file>
 	</welcome-file-list>
 	<servlet>
+		<servlet-name>Delete</servlet-name>
+		<servlet-class>com.jaeksoft.searchlib.web.DeleteServlet</servlet-class>
+	</servlet>
+	<servlet>
 		<servlet-name>Index</servlet-name>
-		<servlet-class> com.jaeksoft.searchlib.web.IndexServlet 
-		</servlet-class>
+		<servlet-class>com.jaeksoft.searchlib.web.IndexServlet</servlet-class>
 	</servlet>
 	<servlet>
 		<servlet-name>Optimize</servlet-name>
-		<servlet-class> com.jaeksoft.searchlib.web.OptimizeServlet 
-		</servlet-class>
+		<servlet-class>com.jaeksoft.searchlib.web.OptimizeServlet</servlet-class>
 	</servlet>
 	<servlet>
 		<servlet-name>Search</servlet-name>
-		<servlet-class> com.jaeksoft.searchlib.web.SearchServlet 
-		</servlet-class>
+		<servlet-class>com.jaeksoft.searchlib.web.SearchServlet</servlet-class>
 	</servlet>
 	<servlet>
 		<servlet-name>Document</servlet-name>
-		<servlet-class> com.jaeksoft.searchlib.web.DocumentServlet 
-		</servlet-class>
+		<servlet-class>com.jaeksoft.searchlib.web.DocumentServlet</servlet-class>
 	</servlet>
 	<servlet>
 		<servlet-name>Stats</servlet-name>
-		<servlet-class> com.jaeksoft.searchlib.web.StatServlet 
-		</servlet-class>
+		<servlet-class>com.jaeksoft.searchlib.web.StatServlet</servlet-class>
 	</servlet>
+	<servlet-mapping>
+		<servlet-name>Delete</servlet-name>
+		<url-pattern>/delete</url-pattern>
+	</servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>Index</servlet-name>
 		<url-pattern>/index</url-pattern>
