Mapping /search /select on select servlet

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -53,6 +53,7 @@
 	<servlet-mapping>
 		<servlet-name>Search</servlet-name>
 		<url-pattern>/select</url-pattern>
+		<url-pattern>/search</url-pattern>
 	</servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>Document</servlet-name>
