--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <!--   
 	License Agreement for Jaeksoft OpenSearchServer
 	
-	Copyright (C) 2008 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2008-2009 Emmanuel Keller / Jaeksoft
 	
 	http://www.jaeksoft.com
 	
@@ -21,8 +21,9 @@
 	along with Jaeksoft OpenSearchServer. 
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<project name="SearchLib" default="dist" basedir=".">
+<project name="OpenSearchServer" default="dist" basedir=".">
 	<property name="src" location="src/java" />
+	<property name="resources" location="src/resources" />
 	<property name="web" location="WebContent" />
 	<property name="lib" location="lib" />
 	<property name="wlib" location="${web}/WEB-INF/lib" />
@@ -32,8 +33,8 @@
 	<property name="doc" location="doc" />
 	<property name="dist" location="dist" />
 	<property name="temp" location="temp" />
-	<property name="name-release" value="searchlib-community" />
-	<property name="name-debug" value="searchlib-community-debug" />
+	<property name="name-release" value="opensearchserver" />
+	<property name="name-debug" value="opensearchserver-debug" />
 
 	<path id="project.class.path">
 		<fileset dir="${lib}">
@@ -64,7 +65,10 @@
 
 	<target name="dist-jar-release" depends="compile-release">
 		<mkdir dir="${dist}" />
-		<jar jarfile="${dist}/${name-release}.jar" basedir="${build-release}" />
+		<jar jarfile="${dist}/${name-release}.jar">
+			<fileset dir="${build-release}" />
+			<fileset dir="${resources}" />
+		</jar>
 	</target>
 
 	<target name="dist-war-release" depends="dist-jar-release">
@@ -76,7 +80,10 @@
 
 	<target name="dist-jar-debug" depends="compile-debug">
 		<mkdir dir="${dist}" />
-		<jar jarfile="${dist}/${name-debug}.jar" basedir="${build-debug}" />
+		<jar jarfile="${dist}/${name-debug}.jar">
+			<fileset dir="${build-debug}" />
+			<fileset dir="${resources}" />
+		</jar>
 	</target>
 
 	<target name="dist-war-debug" depends="dist-jar-debug">
