--- a/build.xml
+++ b/build.xml
@@ -1,18 +1,18 @@
 <!--   
-	License Agreement for Jaeksoft OpenSearchServer
+	License Agreement for Jaeksoft Open Search Server
 	
 	Copyright (C) 2008-2009 Emmanuel Keller / Jaeksoft
 	
 	http://www.jaeksoft.com
 	
-	This file is part of Jaeksoft OpenSearchServer.
+	This file is part of Jaeksoft Open Search Server.
 	
-	Jaeksoft OpenSearchServer is free software: you can redistribute it and/or
+	Jaeksoft Open Search Server is free software: you can redistribute it and/or
 	modify it under the terms of the GNU General Public License as published by
 	the Free Software Foundation, either version 3 of the License, or
 	(at your option) any later version.
 	
-	Jaeksoft OpenSearchServer is distributed in the hope that it will be useful,
+	Jaeksoft Open Search Server is distributed in the hope that it will be useful,
 	but WITHOUT ANY WARRANTY; without even the implied warranty of
 	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 	GNU General Public License for more details.
@@ -33,8 +33,13 @@
 	<property name="doc" location="doc" />
 	<property name="dist" location="dist" />
 	<property name="temp" location="temp" />
-	<property name="name-release" value="open-search-server" />
-	<property name="name-debug" value="open-search-server-debug" />
+	<property name="licenses" location="licenses" />
+	<property name="product" value="open-search-server" />
+	<property name="name-release" value="${product}" />
+	<property name="name-debug" value="${product}-debug" />
+	<property name="tomcat-name" value="apache-tomcat-6.0.18" />
+	<property name="tomcat-zip" location="pkg/${tomcat-name}.zip" />
+
 
 	<path id="project.class.path">
 		<fileset dir="${lib}">
@@ -93,11 +98,29 @@
 		</war>
 	</target>
 
-	<target name="dist" depends="dist-war-release,dist-war-debug" />
+	<target name="dist" depends="dist-war-release,dist-war-debug">
+		<mkdir dir="${dist}/${product}" />
+		<unzip src="${tomcat-zip}" dest="${dist}/${product}" />
+		<delete dir="${dist}/${product}/${tomcat-name}/webapps/ROOT" />
+		<delete dir="${dist}/${product}/${tomcat-name}/webapps/examples" />
+		<delete dir="${dist}/${product}/${tomcat-name}/webapps/docs" />
+		<copy file="${dist}/${product}.war" tofile="${dist}/${product}/${tomcat-name}/webapps/ROOT.war" />
+		<copy todir="${dist}/${product}/LICENSES">
+			<fileset dir="${licenses}" />
+		</copy>
+		<copy todir="${dist}/${product}">
+			<fileset file="NOTICE.txt" />
+			<fileset file="README.txt" />
+		</copy>
+		<zip encoding="windows-1250" basedir="${dist}/${product}" destfile="${dist}/${product}.zip" />
+		<tar compression="gzip" basedir="${dist}/${product}" destfile="${dist}/${product}.tar.gz" />
+		<delete dir="${dist}/${product}" />
+	</target>
 
 	<target name="clean" description="clean up">
 		<delete dir="${build}" />
 		<delete dir="${dist}" />
 		<delete dir="${temp}" />
 	</target>
+
 </project>
