--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,6 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
   <display-name>open-search-server</display-name>
+  <listener>
+  	<description>
+  	Used to cleanup when a session is destroyed</description>
+  	<display-name>
+  	ZK Session cleaner</display-name>
+  	<listener-class>org.zkoss.zk.ui.http.HttpSessionListener</listener-class>
+  </listener>
+  <servlet>
+  	<description>
+  	The servlet loads the DSP pages</description>
+  	<servlet-name>dspLoader</servlet-name>
+  	<servlet-class>
+  	org.zkoss.web.servlet.dsp.InterpreterServlet</servlet-class>
+  </servlet>
+  <servlet>
+  	<description>
+  	The ZK loader for ZUML pages</description>
+  	<servlet-name>zkLoader</servlet-name>
+  	<servlet-class>
+  	org.zkoss.zk.ui.http.DHtmlLayoutServlet</servlet-class>
+  	<init-param>
+  		<param-name>update-uri</param-name>
+  		<param-value>/zkau</param-value>
+  	</init-param>
+  	<load-on-startup>1</load-on-startup>
+  </servlet>
+  <servlet>
+  	<description>
+  	The asynchronous update engine for ZK</description>
+  	<servlet-name>auEngine</servlet-name>
+  	<servlet-class>
+  	org.zkoss.zk.au.http.DHtmlUpdateServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>dspLoader</servlet-name>
+  	<url-pattern>*.dsp</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>zkLoader</servlet-name>
+  	<url-pattern>*.zul</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>zkLoader</servlet-name>
+  	<url-pattern>*.zhtml</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>auEngine</servlet-name>
+  	<url-pattern>/zkau/*</url-pattern>
+  </servlet-mapping>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
@@ -8,5 +57,6 @@
     <welcome-file>default.html</welcome-file>
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
+    <welcome-file>index.zul</welcome-file>
   </welcome-file-list>
 </web-app>
