- CHANGELOG.txt was not copied on zip / tar.gz package

--- a/build.xml
+++ b/build.xml
@@ -112,6 +112,7 @@
 		<copy todir="${dist}/${product}">
 			<fileset file="NOTICE.txt" />
 			<fileset file="README.txt" />
+			<fileset file="CHANGELOG.txt" />
 			<fileset dir="${shell-dir}" />
 		</copy>
 
