2822495	XML-RPC: Library integration. Delete and Update method.

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -138,6 +138,25 @@
 		<servlet-name>Action</servlet-name>
 		<url-pattern>/action</url-pattern>
 	</servlet-mapping>
+
+	<!--  XML RPC -->
+	<servlet>
+		<servlet-name>XmlRpcServlet</servlet-name>
+		<servlet-class>org.apache.xmlrpc.webserver.XmlRpcServlet</servlet-class>
+		<init-param>
+			<param-name>enabledForExtensions</param-name>
+			<param-value>true</param-value>
+		</init-param>
+		<init-param>
+			<param-name>enabledForExceptions</param-name>
+			<param-value>false</param-value>
+		</init-param>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>XmlRpcServlet</servlet-name>
+		<url-pattern>/xmlrpc</url-pattern>
+	</servlet-mapping>
+
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 		<welcome-file>index.htm</welcome-file>
